--- a/main.css
+++ b/main.css
@@ -1,10 +1,10 @@
 html, body {
-	margin: 0; padding: 0;
-	overflow: hidden;
+    overflow: hidden;
 }
 
 canvas {
     width: 80%;
     height: 100%;
+    padding-bottom: 10%;
     position: fixed;
 }
