--- a/main.css
+++ b/main.css
@@ -1,10 +1,11 @@
 html, body {
     overflow: hidden;
+    margin: 0; padding: 0;
 }
 
 canvas {
     width: 80%;
     height: 100%;
-    padding-bottom: 20%;
+    padding-bottom: 10vh; 
     position: fixed;
 }
