--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ html, body {
 }
 
 canvas {
-    width: 80%;
+    width: 75%;
     height: 100%;
     padding-bottom: 10vh; 
     position: fixed;
@@ -15,14 +15,18 @@ canvas {
 }
 
 #controls {
-    width: 20%;
+    width: 25%;
     height: 100%;
     float: right;
     background: black;
 }
 
-button:disabled {
-    display: hidden;
+.hidden {
+    display: none;
+}
+
+.selected {
+    background: yellow;
 }
 
 button {
